--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ Application/Common/Conf/config.php
 Public/uploads/
 
 ThinkPHP/Library/Vendor/phpoffice/phpword/
+
+ThinkPHP/Library/Vendor/composer/
+
+ThinkPHP/Library/composer.lock
+
+ThinkPHP/Library/Vendor/autoload.php
