--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ ThinkPHP/Library/Vendor/composer/
 ThinkPHP/Library/composer.lock
 
 ThinkPHP/Library/Vendor/autoload.php
+
+Application/Common/Conf/debug.php
